--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Vite App</title>
+  <script type="module" crossorigin src="/assets/index.430acc1e.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.e2e6c228.js">
+  <link rel="stylesheet" href="/assets/index.44cd2c15.css">
+</head>
+<body>
+    <div id="app"></div>
+    
+</body>
+</html>
