--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <link rel="icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite App</title>
-  <script type="module" crossorigin src="/assets/index.f2918824.js"></script>
+    <title>Wordles</title>
+  <script type="module" crossorigin src="/assets/index.2034eed3.js"></script>
   <link rel="modulepreload" href="/assets/vendor.e2e6c228.js">
-  <link rel="stylesheet" href="/assets/index.3da5d0f9.css">
+  <link rel="stylesheet" href="/assets/index.28b25f9f.css">
 </head>
 <body>
     <div id="app"></div>
